white space:fix

--- a/styles/catalogue.css
+++ b/styles/catalogue.css
@@ -2,6 +2,7 @@
     /* font-family: var(--primary-font); */
     margin:auto;
     font-style: normal;
+    width:100vw;
 }
 
 .catalogue_header_container{
@@ -15,7 +16,7 @@
 .catalogue_main_title{
     font-size: 80px;
     font-weight: 700;
-    color:#3F4255
+    color:#3F4255;
 }
 .catalogue_main_description{
     font-weight:600;
@@ -87,6 +88,7 @@ width:30%;
     .catalogue_data_left>img{
         width:100%;
     }
+
 }
 
 /* mobile view */
