--- a/styles/header.css
+++ b/styles/header.css
@@ -78,17 +78,27 @@
     margin-right: -2.5rem;
   }
 }
-@media (max-width:980px) and (min-width:921px){
+@media (max-width:980px) and (min-width:945px){
   #header__btn_id_desktop{
     left:0rem;
     width:auto;
-    margin-right: -2.5rem;
+    margin-right:-2.5rem;
     display:flex;
     flex-direction: column;
   }
 } 
+@media (max-width:945px) and (min-width:920px){
+  #header__btn_id_desktop{
+    left:0rem;
+    width:auto;
+    display:flex;
+    flex-direction: column;
+    margin-right:-1.5rem;
+    padding-right: 0.4rem;
+  }
+}
 
-@media (max-width: 920px) {
+@media (max-width: 927px) {
   .header__mobile_btn{
     display: block;
   }
