--- a/styles/offerings.css
+++ b/styles/offerings.css
@@ -44,7 +44,7 @@
     aspect-ratio: auto;
 
 }
-@media (max-width:1120px) and (min-width:921px){
+@media (max-width:1120px) and (min-width:1040px){
     .offerings_lineDraw_img{
         left:74%;
         right:25%;
@@ -53,12 +53,24 @@
         aspect-ratio: auto;
     
     }}
+    @media (max-width:1040px) and (min-width:921px){
+        .offerings_lineDraw_img{
+            left:74%;
+            right:25%;
+            top:85%;
+            width:25%;
+            /* bottom:65%; */
+            aspect-ratio: auto;
+        }
+}
+
+
 @media (max-width:920px){
     .offerings_title{
         font-size: var(--text-low-medium);
     }
     .offerings_lineDraw_img{
-        top:120%;
+        top:100%;
         right:50%;
         left:40%;
         /* bottom:55%; */
